force-app/main/default/objects/Consignment__c/Consignment__c.object-meta.xml
<CustomObject>
    <description>single shipment of one container</description>
    <label>Consignment</label>
    <nameField>
        <displayFormat>UCC-{00000000}</displayFormat>
        <label>Consignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>