force-app/main/default/objects/Consignment__c/fields/Container__c.field-meta.xml
<CustomField>
    <fullName>Container__c</fullName>
    <description>container Number</description>
    <inlineHelpText>container Number</inlineHelpText>
    <label>Container</label>
    <referenceTo>Container__c</referenceTo>
    <relationshipLabel>Consignments</relationshipLabel>
    <relationshipName>Consignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>