force-app/main/default/objects/Consignment__c/fields/Goods__c.field-meta.xml
<CustomField>
    <fullName>Goods__c</fullName>
    <description>name of goods in consignment</description>
    <inlineHelpText>name of goods in consignment</inlineHelpText>
    <label>Goods</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>