force-app/main/default/objects/Consignment__c/fields/Prevent_Save__c.field-meta.xml
<CustomField>
    <fullName>Prevent_Save__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Prevents Consignment Saving if Ship&apos;s capacity exceeded</description>
    <inlineHelpText>Prevents Consignment Saving if Ship&apos;s capacity exceeded</inlineHelpText>
    <label>Prevent Save</label>
    <type>Checkbox</type>
</CustomField>