force-app/main/default/objects/Consignment__c/fields/Voyage__c.field-meta.xml
<CustomField>
    <fullName>Voyage__c</fullName>
    <description>number of voyage where consignment is shipping</description>
    <inlineHelpText>number of voyage where consignment is shipping</inlineHelpText>
    <label>Voyage</label>
    <referenceTo>Voyage__c</referenceTo>
    <relationshipLabel>Consignments</relationshipLabel>
    <relationshipName>Consignments</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>