force-app/main/default/objects/Consignment__c/fields/Weight_kg__c.field-meta.xml
<CustomField>
    <fullName>Weight_kg__c</fullName>
    <description>weight of parcel in kilograms</description>
    <inlineHelpText>weight of parcel in kilograms</inlineHelpText>
    <label>Weight, kg</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>