force-app/main/default/objects/Consignment__c/validationRules/Prevent_Save_is_Checked.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Save_is_Checked</fullName>
    <active>true</active>
    <errorConditionFormula>Prevent_Save__c  = TRUE</errorConditionFormula>
    <errorMessage>Record can&apos;t be saved - Ship is overloaded</errorMessage>
</ValidationRule>