force-app/main/default/objects/Consignment__c/validationRules/Weight_cant_exceed_payload.validationRule-meta.xml
<ValidationRule>
    <fullName>Weight_cant_exceed_payload</fullName>
    <active>true</active>
    <description>Consignment weight can&apos;t exceed container&apos;s payload</description>
    <errorConditionFormula>Weight_kg__c  &gt;  Container__r.Max_Payload_kg__c</errorConditionFormula>
    <errorDisplayField>Weight_kg__c</errorDisplayField>
    <errorMessage>Consignment weight can&apos;t exceed container&apos;s payload</errorMessage>
</ValidationRule>